implementation of games api + swagger ui fixes + database seed fixes
- implemented game CRUD endpoints
- added auth middleware
- updated openapi / swagger documentation
- fixed api responses and error handling
- fixed seed script
- added signficantly more platforms to seed
- cleaned up package.json
